<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_plus"
        android:orderInCategory="20"
        android:title="@string/action_add"
        app:showAsAction="always" />
</menu>
