...
    <string name="add_to_my_dapps">Add to My DApps</string>
    <string name="edit_dapp">Edit DApp</string>
    <string name="dapp_title">Title</string>
    <string name="dapp_address">Address</string>
    <string name="search_or_type_web_address">Search or type web address</string>
    <string name="network">Networks</string>
    <string name="select_active_networks">Select Active Networks</string>
    <string name="title_enabled_networks">Enabled Networks (%s)</string>
    <string name="collectibles">Collectibles</string>
    <string name="token_function">Token Function</string>
    <string name="channel_description">Alphawallet notification channel</string>
    <string name="error_camera_permission_denied">Permission to use the camera was denied.</string>
    <string name="confirm_tokenscript_transaction">Confirm TokenScript Transaction</string>
...
    <string name="ens_not_match_wallet">ENS Name does not match wallet address</string>
    <string name="action_allow_webkit_camera">Allow</string>
    <string name="action_deny_webkit_camera">Deny</string>
    <string name="message_permission_request_webkit_camera">%s wants to use your camera</string>
    <string name="mainnet">Mainnet</string>
    <string name="title_dialog_what_testnet">What is Testnet?</string>
    <string name="action_enable_testnet">Got it, enable Testnet</string>
    <string name="message_dialog_testnet">Testnets tokens are like \'Monopoly\' money. They have zero financial worth but are used by developers to try out new designs without needing to spend valuable coins.</string>
    <string name="select_dappbrowser_network">Connect to Network</string>
    <string name="please_select_at_least_one_network">Please select at least one network.</string>
    <string name="token_info_portfolio">Portfolio</string>
    <string name="enter_target_price">Enter Target Price</string>
    <string name="title_set_new_alert">Set New Alert</string>
...
