...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headerText="@string/testnet"
                app:showSwitch="false" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/test_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />

        </LinearLayout>

...
