...
                        app:useMaterialThemeColors="false"
                        app:buttonTint="@color/selector_button_tint"
                        tools:checked="true"
                        android:layout_height="wrap_content" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/testnet_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="@dimen/small_12"
                        android:clickable="true"
                        android:focusable="true"
...
